Bug 224837 - Calendar name missing in events tooltip
Summary: Calendar name missing in events tooltip
Status: VERIFIED FIXED
Alias: None
Product: korganizer
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.3
Platform: Compiled Sources Linux
: LO normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords: akonadi-ports-regression
: 222909 (view as bug list)
Depends on:
Blocks:
 
Reported: 2010-01-30 01:43 UTC by Sabine Faure
Modified: 2010-05-07 21:09 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Sabine Faure 2010-01-30 01:43:33 UTC
Version:            (using Devel)
Compiler:          gcc 4.3.2 
OS:                Linux
Installed from:    Compiled sources

- Launch KOrg
- Create an event starting at 9:00 and ending at 11:00. Enter a title, location, category and description for it too.
- Click on 'Ok'
- The event is displayed in the agenda view on the proper day and time.
- Move the cursor into the event and a pop up tooltip dialogue should appear. 

In it, you can find the following information: name, date, time, location of the event and its description.
But there is no mention of the calendar name whereas if you create an all-day long event (by unchecking the 'Time associated' box in the 'New Event' dialogue) you can see that the calendar name is given in the tooltip.

Adding the calendar name in the tooltip of an event lasting only a few hours would be more consistant and particularly useful in the Month View where the calendar color is not shown when a category is selected.

Trunk, Svn Rev 1082000
Comment 1 Laurent Montel 2010-02-01 11:48:47 UTC
Hi,
I can see calendar name here.
But when event is reloading I can't there is a bug.
But by default after creating it we can see calendar name.
Comment 2 Sergio Martins 2010-02-01 14:55:04 UTC
Laurent, item.parentCollection().name() is null, tokoe says we should iterate over our collection list and see which one matches item.parentCollection().id() and show that one's name instead.
Comment 3 Laurent Montel 2010-02-02 08:56:40 UTC
*** Bug 222909 has been marked as a duplicate of this bug. ***
Comment 4 Laurent Montel 2010-02-02 08:59:07 UTC
I don't understand why item.parentCollection() is null.
By default an item has a parentCollection and it's not null.
I will look at how it's loading.
Comment 5 Tobias Koenig 2010-05-07 12:36:47 UTC
SVN commit 1123912 by tokoe:

Set the complete parent collection (inclusive name) on the item,
because the normal ItemFetchJob fetches only the id of the parent collection.

BUG: 224837


 M  +3 -1      utils.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1123912
Comment 6 Sabine Faure 2010-05-07 21:09:41 UTC
It is corrected now.

The calendar name (iCal or Kolab calendar) is displayed in the tooltip both in agenda and month view.

Trunk, Svn Rev 1124075