Set the complete parent collection (inclusive name) on the item, because the normal ItemFetchJob fetches only the id of the parent collection.

BUG: 224837

svn path=/trunk/KDE/kdepim/akonadi/kcal/; revision=1123912